--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,7 +5,9 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine"
-    ]
+    ],
+  "resolveJsonModule": true,
+  "esModuleInterop": true
   },
   "include": [
     "src/**/*.spec.ts",
